objects/SFDC_to_SFDC_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Field__c</fullName>
        <label>JSON Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SFDC to SFDC Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Object__c</columns>
        <columns>Field__c</columns>
        <columns>JSON_Field__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>RECORDED INFORMATION</value>
        </filters>
        <label>All</label>
    </listViews>
    <pluralLabel>SFDC to SFDC Mapping</pluralLabel>
</CustomObject>